fix: modal text align

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@
     display: flex;
     flex-direction: row;
     /* height: 55px; */
+    line-height: 50px;
     justify-content: space-around;
     padding: 8px 8px 8px 30px;
     margin-top: 10px;
